[gd_scene load_steps=57 format=3 uid="uid://djw0brrw10117"]

[ext_resource type="Texture2D" uid="uid://d1p3cyfpsckfl" path="res://assests/characters/predators/coyote/sprite_sheet/coyote.png" id="1_e0op0"]
[ext_resource type="Script" path="res://scripts/characters/predators/coyote.gd" id="1_tabye"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8h0lm"]
atlas = ExtResource("1_e0op0")
region = Rect2(0, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkss4"]
atlas = ExtResource("1_e0op0")
region = Rect2(120, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_y34em"]
atlas = ExtResource("1_e0op0")
region = Rect2(240, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qqaf"]
atlas = ExtResource("1_e0op0")
region = Rect2(360, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvam3"]
atlas = ExtResource("1_e0op0")
region = Rect2(480, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5inqn"]
atlas = ExtResource("1_e0op0")
region = Rect2(240, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pclal"]
atlas = ExtResource("1_e0op0")
region = Rect2(360, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0i1i"]
atlas = ExtResource("1_e0op0")
region = Rect2(480, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfkol"]
atlas = ExtResource("1_e0op0")
region = Rect2(600, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox03k"]
atlas = ExtResource("1_e0op0")
region = Rect2(720, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_811j5"]
atlas = ExtResource("1_e0op0")
region = Rect2(0, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_63i8y"]
atlas = ExtResource("1_e0op0")
region = Rect2(120, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj61y"]
atlas = ExtResource("1_e0op0")
region = Rect2(240, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_am2ks"]
atlas = ExtResource("1_e0op0")
region = Rect2(600, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_raep5"]
atlas = ExtResource("1_e0op0")
region = Rect2(720, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_k28m7"]
atlas = ExtResource("1_e0op0")
region = Rect2(840, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gf20"]
atlas = ExtResource("1_e0op0")
region = Rect2(0, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_cij20"]
atlas = ExtResource("1_e0op0")
region = Rect2(840, 250, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln6dd"]
atlas = ExtResource("1_e0op0")
region = Rect2(0, 300, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb7m4"]
atlas = ExtResource("1_e0op0")
region = Rect2(120, 300, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_q67n6"]
atlas = ExtResource("1_e0op0")
region = Rect2(120, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig4jt"]
atlas = ExtResource("1_e0op0")
region = Rect2(240, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7kos"]
atlas = ExtResource("1_e0op0")
region = Rect2(360, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fg8y"]
atlas = ExtResource("1_e0op0")
region = Rect2(480, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvybj"]
atlas = ExtResource("1_e0op0")
region = Rect2(360, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2t3j"]
atlas = ExtResource("1_e0op0")
region = Rect2(480, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mlpy"]
atlas = ExtResource("1_e0op0")
region = Rect2(600, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5kkf"]
atlas = ExtResource("1_e0op0")
region = Rect2(720, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwxw5"]
atlas = ExtResource("1_e0op0")
region = Rect2(840, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_v64h1"]
atlas = ExtResource("1_e0op0")
region = Rect2(600, 50, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj5bt"]
atlas = ExtResource("1_e0op0")
region = Rect2(720, 50, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_soerf"]
atlas = ExtResource("1_e0op0")
region = Rect2(840, 50, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nkd6"]
atlas = ExtResource("1_e0op0")
region = Rect2(0, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqfwv"]
atlas = ExtResource("1_e0op0")
region = Rect2(120, 100, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljrlu"]
atlas = ExtResource("1_e0op0")
region = Rect2(360, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sumlv"]
atlas = ExtResource("1_e0op0")
region = Rect2(480, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl1mr"]
atlas = ExtResource("1_e0op0")
region = Rect2(600, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cxpt"]
atlas = ExtResource("1_e0op0")
region = Rect2(720, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg483"]
atlas = ExtResource("1_e0op0")
region = Rect2(840, 150, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqvh1"]
atlas = ExtResource("1_e0op0")
region = Rect2(0, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nsic"]
atlas = ExtResource("1_e0op0")
region = Rect2(120, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kulb"]
atlas = ExtResource("1_e0op0")
region = Rect2(240, 200, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kixpt"]
atlas = ExtResource("1_e0op0")
region = Rect2(600, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7br2x"]
atlas = ExtResource("1_e0op0")
region = Rect2(720, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqjmo"]
atlas = ExtResource("1_e0op0")
region = Rect2(840, 0, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qawv"]
atlas = ExtResource("1_e0op0")
region = Rect2(0, 50, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3y2c"]
atlas = ExtResource("1_e0op0")
region = Rect2(120, 50, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8wye"]
atlas = ExtResource("1_e0op0")
region = Rect2(240, 50, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwr88"]
atlas = ExtResource("1_e0op0")
region = Rect2(360, 50, 120, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2kaq"]
atlas = ExtResource("1_e0op0")
region = Rect2(480, 50, 120, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_tdujy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkss4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y34em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qqaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvam3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0lm")
}],
"loop": true,
"name": &"attack_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pclal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0i1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfkol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox03k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inqn")
}],
"loop": true,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_811j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63i8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj61y")
}],
"loop": true,
"name": &"base_templates",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_am2ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raep5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raep5")
}],
"loop": true,
"name": &"hurt_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k28m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gf20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gf20")
}],
"loop": true,
"name": &"hurt_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cij20")
}],
"loop": true,
"name": &"idle_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb7m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6dd")
}],
"loop": true,
"name": &"idle_front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig4jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67n6")
}],
"loop": true,
"name": &"idle_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fg8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kos")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvybj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2t3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mlpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5kkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwxw5")
}],
"loop": true,
"name": &"run_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v64h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj5bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soerf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nkd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqfwv")
}],
"loop": true,
"name": &"run_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljrlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sumlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl1mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cxpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg483")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqvh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nsic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kulb")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kixpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7br2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqjmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qawv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3y2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8wye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwr88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2kaq")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6myql"]
radius = 111.005

[sub_resource type="RectangleShape2D" id="RectangleShape2D_doh5h"]
size = Vector2(33.5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgu4j"]
size = Vector2(66, 38)

[node name="coyote" type="CharacterBody2D"]
script = ExtResource("1_tabye")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_tdujy")
animation = &"walk_left"
frame_progress = 0.939858
offset = Vector2(5, -20)
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://assests/characters/predators/coyote/sprite_sheet",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://assests/characters/predators/coyote/coyote.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_6myql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_doh5h")

[node name="coyote_hitbox" type="Area2D" parent="."]
position = Vector2(0, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="coyote_hitbox"]
position = Vector2(-2, -11)
shape = SubResource("RectangleShape2D_fgu4j")

[node name="damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.780392, 0.172549, 0.117647, 1)
offset_left = -11.0
offset_top = 6.0
offset_right = 229.0
offset_bottom = 46.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="knockback_timer" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="coyote_hitbox" to="." method="_on_coyote_hitbox_body_entered"]
[connection signal="body_exited" from="coyote_hitbox" to="." method="_on_coyote_hitbox_body_exited"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="knockback_timer" to="." method="_on_knockback_timer_timeout"]
